Finished categories, specifications and add tyseringe
