# src/swagger.json
@@ -1,8 +1,8 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "Rentalx Documentation",
-    "dscription": "This is an API Rent",
+    "title": "RentX Documentation",
+    "dscription": "This is an API RentX",
     "version": "1.0.0",
     "contact": {
       "name": "Thiago Torres",
@@ -46,7 +46,7 @@
         }
       },
       "get": {
-        "type": ["Category"],
+        "tags": ["Category"],
         "summary": "Get all categories",
         "description": "Get all categories",
         "responses": {
@@ -78,6 +78,70 @@
               }
             }
           }
+        }
+      }
+    },
+    "/categories/import": {
+      "post":{
+        "tags": ["Category"],
+        "summary": "Upload a new categories",
+        "description": "Upload a new categories",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201":{
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/specifications": {
+      "post": {
+        "tags": ["Specifications"],
+        "summary": "Create a specification",
+        "description": "Create a new specification",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/Specification"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Specification already exists"
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "Specification": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
         }
       }
     }
